--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 
 <head>
 	<meta charset="utf-8">
+
+	<script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
+	<script>
+	  // Initialize Firebase
+	  var config = {
+	    apiKey: "AIzaSyB-8N9VyslyTgx-fNbct1OYosMeGxP3VCA",
+	    authDomain: "botana-188311.firebaseapp.com",
+	    databaseURL: "https://botana-188311.firebaseio.com",
+	    projectId: "botana-188311",
+	    storageBucket: "botana-188311.appspot.com",
+	    messagingSenderId: "763525143765"
+	  };
+	  firebase.initializeApp(config);
+	</script>
+
 	<script src="botAna.js"></script>
 
 	<script>
@@ -13,17 +28,23 @@
 	<link rel="stylesheet" type="text/css" href="style.css"/>
 
 	<!-- Bootstrap -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 	<title>BotAna</title>
+
 </head>
 
-	<body>
-	<div id="message_window"></div>
+<body class="body-content">
+	<div id="message_window">
+		<span style="color:#9e9e9e">Connesso al canale. Benvenuto!</span>
+	</div>
 	<div class="button-list">
-		<button class="disconnect btn">Disconnect from chat</button>
+		<button type="button" class="btn btn-danger btn-sm">Disconnect from chat</button>
+		<button type="button" class="btn btn-success btn-sm">Reconnect to chat</button>
 	</div>
 
 	<script>
