--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div class="form-group">
 				<input type="input" class="form-control" id="content_input" placeholder="Invia un messaggio"></input>
 			</div>
-			<div>
+			<div id="form-btn-container">
 				<button type="button" class="btn btn-primary" id="send-msg-btn">Chat</button>
 			</div>
 		</div>
